# vscode-git-wrap-for-msys2

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  call_git.c  call_git.h  get_exe_path.c  get_exe_path.h  main.c  path_conv.c  path_conv.h  pch.h  set_cmd.c  set_cmd.h  set_env.c  set_env.h
.github/workflows/: build.yml
